Compress model file when saving with joblib

--- a/NYC-Road-Network-Analysis/Road_network_analysis.ipynb
+++ b/NYC-Road-Network-Analysis/Road_network_analysis.ipynb
@@ -100,7 +100,7 @@
         "\n",
         "# 5. Saving the Model\n",
         "model_filename = 'nyc_taxi_model.pkl'\n",
-        "joblib.dump(rf_model, model_filename)\n",
+        "joblib.dump(rf_model, 'nyc_taxi_model.pkl', compress=3)\n",
         "\n",
         "print(f\"\\nModel saved as '{model_filename}'\")"
       ]
